# neid-gsstudy

./: .gitignore  CMakeLists.txt  nessi_guider_centroid_information-may17.txt  process-data.tcsh
Analysis/: GuidestartreamFirstLook.ipynb
Analysis2/: nb_05.39.53_1371.ipynb  nb_05.42.12_1372.ipynb  nb_05.44.06_1373.ipynb  nb_05.46.33_1374.ipynb  nr_05.39.53_1371.ipynb  nr_05.42.12_1372.ipynb  nr_05.44.06_1373.ipynb  nr_05.46.33_1374.ipynb
Analysis2/.ipynb_checkpoints/: nb_05.39.53_1371-checkpoint.ipynb  nb_05.42.12_1372-checkpoint.ipynb  nb_05.44.06_1373-checkpoint.ipynb  nb_05.46.33_1374-checkpoint.ipynb  nr_05.42.12_1372-checkpoint.ipynb  nr_05.44.06_1373-checkpoint.ipynb
src/: Photometry.h  centroid.c  centroid.h  findSly2.c  get_fits_pixels.c  load_pixels.c  load_pixels.h  momentCentroid.c  nessi-cent.c  nessi_struct.h  readnessi.c  utils.c  utils.h
